<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/_16dp">

    <EditText
        android:id="@+id/editTextProductName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_product"
        />

    <EditText
        android:id="@+id/editTextWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/weight"
        android:inputType="number"
        />

    <EditText
        android:id="@+id/editTextPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        android:inputType="number"
        />

</LinearLayout>